# Zotero2Readwise

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  flake.nix  pyproject.toml  setup.cfg  test_integration.py
.github/workflows/: README.md  automation-example.yaml  ci.yaml  test.yaml
tests/: __init__.py  conftest.py  test_exception.py  test_helper.py  test_readwise.py  test_run.py  test_zotero.py  test_zt2rw.py
zotero2readwise/: __init__.py  exception.py  helper.py  readwise.py  run.py  test.py  zotero.py  zt2rw.py
zt2rw/: __init__.py  helper.py  readwise.py  run.py  zotero.py
