[tool.poetry]
name = "zotero2readwise"
version = "0.4.4"
description = "Export your Zotero annotations and notes to Readwise"
readme = "README.md"
authors = ["ealizadeh <hello@ealizadeh.com>"]
license = "MIT"
homepage = "https://github.com/e-alizadeh/Zotero2Readwise"
repository = "https://github.com/e-alizadeh/Zotero2Readwise"
documentation = "https://github.com/e-alizadeh/Zotero2Readwise"
keywords = [
    "Zotero",
    "Readwise",
]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
    "Development Status :: 3 - Alpha"
]

[tool.semantic_release]
version_variables = [
    "zotero2readwise/__init__.py:__version__",
    "pyproject.toml:version"
]

[tool.semantic_release.remote.token]
env = "GH_TOKEN" # default env name containing the GitHub Token 

[tool.poetry.dependencies]
python = "^3.8"
Pyzotero = "^1.4.26"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
ipython = "^7.32.0"
pre-commit = "^2.16.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
